(lang dune 3.5)

(name hasm)

(generate_opam_files true)

(source
 (github hiljusti/hack-assembler))

(authors "J.R. Hill")

(maintainers "J.R. Hill")

(license BSD-3-Clause)

(documentation https://github.com/hiljusti/hack-assembler)

(package
 (name hasm)
 (synopsis "Hack Assembler")
 (description "A Hack Assembler, as specified in chapter 6 of 'The Elements of Computing Systems'")
 (depends
    (ocaml (>= 4.11))
    dune
    (stdint (>= 0.7)))
 (tags
  (topics "hack" "assembler")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
